<package>
  <name>wheelchair_description</name>
  <version>0.0.1</version>

  <description>This package contains the description of the wheelchair.</description>
  <author email="tof7@aber.ac.uk">Tomos Fearn</author>

  <maintainer email="tof7@aber.ac.uk">Tomos Fearn</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
